Tests/CompilerTests/negative/invalid-alias.expected
negative/invalid-alias.hylo:17.8-9: error: cannot pass value of type 'Z<Void>' to parameter 'X<Void>'
  f(x: x)
       ^
